--- a/src/style.css
+++ b/src/style.css
@@ -35,12 +35,18 @@ p {
 
 .secondbox {
   position: relative;
-  left: 750px;
+  left: 700px;
   top: -150px;
 }
 
 .centrebox {
   position: relative;
   left: 300px;
-  top: -70px;
+  top: -200px;
+}
+
+.card-container {
+  position: relative;
+  left: -270px;
+  top: 100px;
 }
