--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,7 @@ p {
   position: relative;
   left: -270px;
   top: 100px;
+  text-align: center;
 }
 
 .card-header .active {
@@ -79,4 +80,22 @@ p {
 
 .celsius-link .active:hover {
   text-decoration: none;
+}
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: #000;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
+
+.weather-forecast-temperatures {
+  font-size: 13px;
 }
