--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,7 @@ p {
   max-width: 1000px;
   margin: 0 auto;
   line-height: 22px;
+  position: relative;
 }
 
 .card {
@@ -31,12 +32,13 @@ p {
 .firstbox {
   position: relative;
   left: 30px;
+  top: 100px;
 }
 
 .secondbox {
   position: relative;
   left: 700px;
-  top: -150px;
+  top: -80px;
 }
 
 .centrebox {
@@ -84,8 +86,12 @@ p {
 
 .weather-forecast {
   margin-top: 20px;
-  text-align: center;
+  padding: 50px;
+  margin: 0 auto;
+  position: relative;
+  left: -100px;
   color: #000;
+  margin-left: -245px;
 }
 
 .weather-forecast-date {
@@ -98,4 +104,16 @@ p {
 
 .weather-forecast-temperatures {
   font-size: 13px;
+}
+
+.col {
+  display: inline-block;
+  margin-bottom: 100px;
+}
+
+.signature {
+  padding: 100px;
+  position: relative;
+  left: 100px;
+  text-align: center;
 }
