--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,18 @@ h1 {
   text-align: center;
 }
 
+body {
+  display: block;
+  margin: 10px;
+  border-width: 500px;
+  background: linear-gradient(
+    112.1deg,
+    rgb(32, 38, 57) 11.4%,
+    rgb(63, 76, 119) 70.2%
+  );
+  font-style: Arial;
+}
+
 p {
   text-align: center;
   padding: 0px;
@@ -17,8 +29,13 @@ p {
   border: 4px solid black;
   border-radius: 20px;
   padding: 5px;
-  background-color: white;
-  max-width: 1000px;
+  background: linear-gradient(
+    109.6deg,
+    rgb(80, 154, 175) 11.2%,
+    rgb(125, 216, 199) 59.3%,
+    rgb(245, 255, 195) 92.7%
+  );
+  max-width: 1050px;
   margin: 0 auto;
   line-height: 22px;
   position: relative;
@@ -53,6 +70,7 @@ p {
   left: -270px;
   top: 100px;
   text-align: center;
+  padding: 2px;
 }
 
 .card-header .active {
@@ -86,7 +104,7 @@ p {
 
 .weather-forecast {
   margin-top: 20px;
-  padding: 50px;
+  padding: 40px;
   margin: 0 auto;
   position: relative;
   left: -100px;
@@ -115,7 +133,5 @@ p {
 .signature {
   padding: 100px;
   position: relative;
-  top: -100px;
-  left: -500px;
   text-align: center;
 }
