--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,7 @@ p {
   position: relative;
   left: 300px;
   top: -200px;
+  width: 300px;
   text-transform: capitalize;
 }
 
@@ -103,13 +104,11 @@ p {
 }
 
 .weather-forecast {
-  margin-top: 20px;
-  padding: 40px;
-  margin: 0 auto;
-  position: relative;
-  left: -100px;
   color: #000;
-  margin-left: -245px;
+  display: block;
+  margin: 0 auto;
+  left: -40px;
+  margin-top: ;
 }
 
 .weather-forecast-date {
